<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastelBlueBackground">

    <ImageView
        android:id="@+id/imagenLogo2"
        android:layout_width="87dp"
        android:layout_height="93dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="350dp"
        android:contentDescription="@string/imagen_del_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/buttonSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtErrorRepeatPassword"
        android:backgroundTint="@color/pastelBlueButtonBackground"
        android:textColor="@color/blueGrayButtonText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtErrorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="325dp"
        android:singleLine="true"
        android:textColorHint="@color/blueGrayStrongText"
        app:boxBackgroundColor="@color/pastelBlueBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameSignIn"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/imagenLogo2"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtErrorFirstSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="300dp"
        android:singleLine="true"
        android:textColorHint="@color/blueGrayStrongText"
        app:boxBackgroundColor="@color/pastelBlueBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstSurname"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstSurnameSignIn"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtErrorSecondSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="300dp"
        android:singleLine="true"
        android:textColorHint="@color/blueGrayStrongText"
        app:boxBackgroundColor="@color/pastelBlueBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secondSurname"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/secondSurnameSignIn"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/firstSurname"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtErrorAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="200dp"
        android:singleLine="true"
        android:textColorHint="@color/blueGrayStrongText"
        app:boxBackgroundColor="@color/pastelBlueBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addressSignIn"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/secondSurname"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtErrorEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="290dp"
        android:layout_marginBottom="150dp"
        android:singleLine="true"
        android:textColorHint="@color/blueGrayStrongText"
        app:boxBackgroundColor="@color/pastelBlueBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailSignIn"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/address"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtErrorAddPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="360dp"
        android:layout_marginBottom="100dp"
        android:singleLine="true"
        android:textColorHint="@color/blueGrayStrongText"
        app:boxBackgroundColor="@color/pastelBlueBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordSignIn"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="#546E7A"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtErrorRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="470dp"
        android:layout_marginBottom="90dp"
        android:singleLine="true"
        android:textColorHint="@color/blueGrayStrongText"
        app:boxBackgroundColor="@color/pastelBlueBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPassword"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordRepeatSignIn"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/addPassword"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>